<?xml version="1.0" encoding="utf-8"?>
    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/yellow"
    android:orientation="vertical"
    android:textColor="@color/black"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteY="1dp">


        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/gilroy_bold"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="219dp"
            android:layout_height="464dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="100dp"

            android:layout_marginBottom="16dp"
            android:columnCount="2"
            android:rowCount="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="0"
                android:layout_column="0"
                android:layout_columnWeight="0"
                android:layout_marginStart="10sp"
                android:layout_marginTop="0sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10sp"
                android:onClick="clicked"
                app:cardBackgroundColor="@color/dirty_white"
                app:cardCornerRadius="15sp"
                app:cardElevation="10sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/coke"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_margin="10sp"
                        android:scaleType="fitCenter"
                        android:clickable="false"
                        app:srcCompat="@drawable/coke_can" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/gilroy_bold"
                        android:text="@string/product_name_1"
                        android:clickable="false"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/priceView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="3sp"
                        android:fontFamily="@font/gilroy_regular"
                        android:gravity="center"
                        android:text="@string/product_price_1"
                        android:clickable="false"
                        android:textSize="18sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="0"
                android:layout_column="0"
                android:layout_columnWeight="0"
                android:layout_marginStart="10sp"
                android:layout_marginTop="0sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10sp"
                android:onClick="clicked"
                app:cardBackgroundColor="@color/dirty_white"
                app:cardCornerRadius="15sp"
                app:cardElevation="10sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/sprite"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_margin="10sp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/sprite_can" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/gilroy_bold"
                        android:text="@string/product_name_2"
                        android:textAlignment="center"
                        android:textSize="21sp" />

                    <TextView
                        android:id="@+id/priceView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="3sp"
                        android:fontFamily="@font/gilroy_regular"
                        android:gravity="center"
                        android:text="@string/product_price_2"
                        android:textSize="18sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_rowWeight="0"
                android:layout_column="0"
                android:layout_columnWeight="0"
                android:layout_marginStart="10sp"
                android:layout_marginTop="0sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10sp"
                android:onClick="clicked"
                app:cardBackgroundColor="@color/dirty_white"
                app:cardCornerRadius="15sp"
                app:cardElevation="10sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/mountain_dew"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_margin="10sp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/mountain_dew_can" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="10sp"
                        android:fontFamily="@font/gilroy_bold"
                        android:text="@string/product_name_3"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/priceView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="3sp"
                        android:fontFamily="@font/gilroy_regular"
                        android:gravity="center"
                        android:text="@string/product_price_3"
                        android:textSize="18sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="0"
                android:layout_column="1"
                android:layout_columnWeight="0"
                android:layout_marginStart="10sp"
                android:layout_marginTop="0sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10sp"
                android:onClick="clicked"
                app:cardBackgroundColor="@color/dirty_white"
                app:cardCornerRadius="15sp"
                app:cardElevation="10sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/tropicana"
                        android:layout_width="70dp"
                        android:layout_height="75dp"
                        android:layout_margin="10sp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/tropicana_bottle" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/gilroy_bold"
                        android:text="@string/product_name_4"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/priceView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="3sp"
                        android:fontFamily="@font/gilroy_regular"
                        android:gravity="center"
                        android:text="@string/product_price_4"
                        android:textSize="18sp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="0"
                android:layout_column="1"
                android:layout_columnWeight="0"
                android:layout_marginStart="10sp"
                android:layout_marginTop="0sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10sp"
                android:onClick="clicked"
                app:cardBackgroundColor="@color/dirty_white"
                app:cardCornerRadius="15sp"
                app:cardElevation="10sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/mineral_water"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_margin="10sp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/mineral_water" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/gilroy_bold"
                        android:text="@string/product_name_5"
                        android:textAlignment="center"
                        android:textSize="21sp" />

                    <TextView
                        android:id="@+id/priceView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="3sp"
                        android:fontFamily="@font/gilroy_regular"
                        android:gravity="center"
                        android:text="@string/product_price_5"
                        android:textSize="18sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_rowWeight="0"
                android:layout_column="1"
                android:layout_columnWeight="0"
                android:layout_marginStart="10sp"
                android:layout_marginTop="0sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10sp"
                android:onClick="clicked"
                app:cardBackgroundColor="@color/dirty_white"
                app:cardCornerRadius="15sp"
                app:cardElevation="10sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">>

                    <ImageView
                        android:id="@+id/pepsi"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_margin="10sp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/pepsi_can" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/gilroy_bold"
                        android:text="@string/product_name_6"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/priceView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="3sp"
                        android:fontFamily="@font/gilroy_regular"
                        android:gravity="center"
                        android:text="@string/product_price_6"
                        android:textSize="18sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

        <EditText
            android:id="@+id/CashAmountEdit"
            android:layout_width="252dp"
            android:layout_height="64dp"
            android:ems="10"
            android:fontFamily="@font/gilroy_bold"
            android:gravity="center"
            android:inputType="number"
            android:hint="Insert Cash Here"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appTitle"
            app:layout_constraintVertical_bias="0.41" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>